--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <p>welcome everyone</p>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PLATFORM</title>
+</head>
+<body>
+  <hr>
+  <img 
+  height="300"
+  width="400"
+  src="https://wallpapers.com/images/hd/manchester-united-logo-with-spear-pg0xy7b46vfrvssh.jpg" alt="man utd logo"> 
+   <img 
+   height="300"
+   width="400"
+   src="https://c.files.bbci.co.uk/3f11/live/f4008e60-6e9e-11ef-aae5-a7098ec0dd1c.jpg" alt="stadium">
+   <a href="https://www.youtube.com">youtube/a>
+    <ul>
+    <li>we love it</li>
+    <li>its a great team</li>
+   </ul>
+   <ol>
+    <li>its old</li>
+    <li>its wealthy</li>
+   </ol>
+
+</body>
+</html>
